--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,3 +1,6 @@
+
+<!-- <span>{{ task.assignee?.name }}</span> -->
+
 <bootstrap-panel>
     <ng-container class="heading">Heading</ng-container>
     <div class="body">
@@ -5,5 +8,46 @@
         <p>Some content here...</p>
     </div>
 </bootstrap-panel>
+
+<input type="text" [appInputFormat]="'uppercase'" />
+
 <h1>Good Evening!</h1>
 <favorite [isFavorite]="post.isFavorite" (click)="onFavoriteChanged($event)"></favorite>
+
+<!-- ngIf -->
+<div [hidden]="courses.length == 0">
+    List of courses
+</div>
+<div [hidden]="courses.length > 0">
+    No courses yet
+</div>
+
+<!-- ngSwitchCase -->
+<ul class="nav nav-pills">
+    <li class="btn" [class.active]="viewMode == 'map'"><button (click)="viewMode = 'map'">Map View</button></li>
+    <li class="btn" [class.active]="viewMode == 'list'"><button (click)="viewMode = 'list'">List View</button></li>
+</ul>
+<div [ngSwitch]="viewMode">
+    <div *ngSwitchCase="'map'">Map View Content</div>
+    <div *ngSwitchCase="'list'">List View Content</div>
+    <div *ngSwitchDefault="">Otherwise</div>
+</div>
+
+
+<button (click)="loadCourses()">Load Courses</button>
+<!-- ngFor -->
+<ul>
+    <li *ngFor="let course of courses; trackBy: trackCourse">
+      {{ course.name }}
+      <button (click)="onChange(course)">Change</button>
+    </li>
+</ul>
+
+<button 
+[ngStyle]="{
+    'backgroundColor': canSave ? 'blue': 'gray',
+    'color': canSave ? 'white' : 'black'
+}" 
+(click)="onAdd()">
+Add
+</button><br/>
